<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="top">
    <ImageSwitcher
        android:id="@+id/ImageSwitcher01"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="fill_parent"
        android:background="@drawable/assassin_background">

    </ImageSwitcher>
    
    <TextView 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/main_title" 
    	android:layout_alignParentTop="true" 
    	android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
    	android:textSize="30sp"
    	android:textStyle="bold"
    	android:id="@+id/textView1"
    	android:shadowColor="#111111"
        android:shadowRadius="2.5"  
        android:shadowDx="2"  
        android:shadowDy="2" >
    </TextView>

    <Button
        android:id="@+id/assassinate_button"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dip"
        android:text="@string/main_assassinations" 
        android:background="@drawable/burnt_paper_button"/>
    
    <Button 
       	android:text="@string/main_conspire" 
       	android:layout_width="150dip" 
       	android:layout_height="wrap_content"
       	android:layout_centerHorizontal="true"
       	android:layout_marginTop="200dip"
       	android:id="@+id/conspire_button"
       	android:background="@drawable/burnt_paper_button">
    </Button>

    <Button
        android:id="@+id/honors_button"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dip"
        android:text="@string/main_honors"
        android:background="@drawable/burnt_paper_button" />

    <Button
        android:id="@+id/book_of_hassan"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dip"
        android:text="@string/main_book_of_hassan"
        android:background="@drawable/burnt_paper_button" />
    
</RelativeLayout>